kubernetes/jt/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jt
  labels:
    app: jt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jt
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: jt
    spec:
      containers:
        - env:
            - name: TZ
              value: Asia/Taipei
            - name: SERVER_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
          name: jt
          image: derek82511/jt:1.3.1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: '2'
              memory: 5120Mi
      nodeSelector:
        jt: 'master'
