kubernetes/jt/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jt
  labels:
    app: jt
spec:
  ports:
    - name: http
      port: 10080
      protocol: TCP
      targetPort: 10080
      nodePort: 32000
  selector:
    app: jt
  type: NodePort
